--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
     "@types/passport-http": "^0.3.9",
+    "jsonschema": "^1.4.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
     "koa-passport": "^6.0.0",
     "koa-router": "^12.0.0",
+    "koa-static-folder": "^0.1.6",
+    "koa-static-server": "^1.5.2",
     "passport-http": "^0.3.0",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
@@ -18,6 +21,7 @@
     "@types/koa-json": "^2.0.20",
     "@types/koa-logger": "^3.1.2",
     "@types/koa-passport": "^6.0.0",
-    "@types/koa-router": "^7.4.4"
+    "@types/koa-router": "^7.4.4",
+    "@types/koa-static-server": "^1.5.0"
   }
 }
